--- a/app/views/about/mensaje.html.erb
+++ b/app/views/about/mensaje.html.erb
@@ -26,7 +26,7 @@
 </section>
 
 <script>
-	$(document).on('page:update', function() {
+	document.addEventListener("turbolinks:load", function() {
 		$("#cmd_aceptar").click(function(e){
 			window.location.href = "/about";
 		});
