--- a/app/views/accions/_form.html.erb
+++ b/app/views/accions/_form.html.erb
@@ -31,7 +31,7 @@
 		<div id="tm-form-footer">
 			<div class="actions">
 				<script>
-					$(document).on('page:update', function() {
+					document.addEventListener("turbolinks:load", function() {
 						$("#cmd_aceptar").click(function(e){
 							<% if params[:action] == "edit" then %>
 								$('#<%= params[:action] %>_accion_<%= @accion.id %>').submit();
@@ -55,6 +55,6 @@
 
 <script>
 	$(function(){
-		 $( document ).trigger( "page:update" );
+		 $( document ).trigger( "turbolinks:load" );
 	});
 </script>
