--- a/app/views/ruta/show.html.erb
+++ b/app/views/ruta/show.html.erb
@@ -102,7 +102,7 @@
 </section>
 
 <script>
-	$(document).on('page:load', function() {
+	document.addEventListener("turbolinks:load", function() {
 			if ( $.fn.dataTable.isDataTable( '#indexTable' ) ) {
 			    table = $('#indexTable').DataTable();
 			}
