--- a/app/assets/stylesheets/flexslider.css
+++ b/app/assets/stylesheets/flexslider.css
@@ -262,7 +262,7 @@ html[xmlns] .flexslider .slides {
 /* ====================================================================================================================
  * RESPONSIVE
  * ====================================================================================================================*/
-@media screen and (max-width: 860px) {*/
+@media screen and (max-width: 860px) {
   .flex-direction-nav .flex-prev {
     opacity: 1;
     left: 10px;
