--- a/app/views/catalogos/index.html.erb
+++ b/app/views/catalogos/index.html.erb
@@ -65,7 +65,7 @@
 
 <script>
 
-		$(document).on('page:load', function() {
+		document.addEventListener("turbolinks:load", function() {
 			if ( $.fn.dataTable.isDataTable( '#indexTable' ) ) {
 			    table = $('#indexTable').DataTable();
 			}
