--- a/app/views/causals/_form.html.erb
+++ b/app/views/causals/_form.html.erb
@@ -39,7 +39,7 @@
 		<div id="tm-form-footer">
 			<div class="actions">
 				<script>
-					$(document).on('page:update', function() {
+					document.addEventListener("turbolinks:load", function() {
 						$("#cmd_aceptar").click(function(e){
 							<% if params[:action] == "edit" then %>
 								$('#<%= params[:action] %>_causal_<%= @causal.id %>').submit();
