--- a/app/views/detalle_reservas/solicitar_reserva.html.erb
+++ b/app/views/detalle_reservas/solicitar_reserva.html.erb
@@ -30,9 +30,9 @@
 										<td><%= @enterDestino.enter_nombreCorto %></td>
 										<th><strong>FECHA DE REGRESO</strong></th>
 										<td><%= @dtFechaRegreso %></td>
-										<td><%= @nroAdultos %></td>
-										<td><%= @nroMenores %></td>
-										<td><%= @nroInfantes %></td>
+										<td><%= @adultos %></td>
+										<td><%= @menores %></td>
+										<td><%= @infantes %></td>
 									</tr>
 								</table>
 								<p>&nbsp;</p>
@@ -91,13 +91,13 @@
 									          			
 								<ul class="nav nav-tabs tm-white-bg" role="tablist" id="personTabs">
 								    <li role="presentation" class="active">
-										<a href="#adultos" aria-controls="adultos" role="tab" data-toggle="tab">Adultos (<%= @nroAdultos %>)</a>
+										<a href="#adultos" aria-controls="adultos" role="tab" data-toggle="tab">Adultos (<%= @adultos %>)</a>
 								    </li>
 								    <li role="presentation">
-								    	<a href="#menores" aria-controls="menores" role="tab" data-toggle="tab">Menores (<%= @nroMenores %>)</a>
+								    	<a href="#menores" aria-controls="menores" role="tab" data-toggle="tab">Menores (<%= @menores %>)</a>
 								    </li>
 								    <li role="presentation">
-								    	<a href="#infantes" aria-controls="infantes" role="tab" data-toggle="tab">Infantes (<%= @nroInfantes %>)</a>
+								    	<a href="#infantes" aria-controls="infantes" role="tab" data-toggle="tab">Infantes (<%= @infantes %>)</a>
 								    </li>
 								</ul>
 		
@@ -107,7 +107,7 @@
 											<div class="tm-search-box">
 												<div class="tm-form-inner frm-reservas" id="ad-inner">
 														<% nmIndex = 0 %>
-														<% for i in 1..@nroAdultos %>
+														<% for i in 1..@adultos %>
 															<% nmIndex = nmIndex + 1 %>
 															<h4><%= "Adulto #{i}" %></h4>
 															<div class="col-lg-12">
@@ -143,7 +143,7 @@
 										<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="menores">
 											<div class="tm-search-box">
 												<div class="tm-form-inner frm-reservas">
-													<% for i in 1..@nroMenores %>
+													<% for i in 1..@menores %>
 														<% nmIndex = nmIndex + 1 %>
 															<h4><%= "Menor #{i}" %></h4>
 												          	<div class="col-lg-12">
@@ -191,7 +191,7 @@
 									   	<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="infantes">
 											<div class="tm-search-box">
 												<div class="tm-form-inner frm-reservas">
-													<% for i in 1..@nroInfantes %>
+													<% for i in 1..@infantes %>
 														<% nmIndex = nmIndex + 1 %>
 														<h4><%= "Infante #{i}" %></h4>
 												          	<div class="col-lg-12">
@@ -238,7 +238,7 @@
 										</div>
 									</div>
 						            <div class="form-group tm-yellow-gradient-bg text-center">
-						            	<%= hidden_field_tag :datos_viaje, @producto + "|" + @enterOrigen.id.to_s + "|" + @enterDestino.id.to_s + "|" + @dtFechaIda + "|" + @dtFechaRegreso + "|" + @nroAdultos.to_s + "|" + @nroMenores.to_s + "|" + @nroInfantes.to_s + "|" + @idProducto %>
+						            	<%= hidden_field_tag :datos_viaje, @producto + "|" + @enterOrigen.id.to_s + "|" + @enterDestino.id.to_s + "|" + @dtFechaIda + "|" + @dtFechaRegreso + "|" + @adultos.to_s + "|" + @menores.to_s + "|" + @infantes.to_s + "|" + @idProducto %>
 						            	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 						            	<input type="button" id="cmdEnviar" value="Enviar" class="tm-orange-btn">
 						            </div>	
@@ -263,7 +263,7 @@
 	</section>
 	
 <script>
-	$(document).on('page:update', function() {
+		document.addEventListener("turbolinks:load", function() {
 		
 			$('.date').datetimepicker({
             	format: 'DD/MM/YYYY',
