--- a/app/views/ruta/_form.html.erb
+++ b/app/views/ruta/_form.html.erb
@@ -73,7 +73,7 @@
 		<div id="tm-form-footer">
 			<div class="actions">
 				<script>
-					$(document).on('page:update', function() {
+					document.addEventListener("turbolinks:load", function() {
 						$("#cmd_aceptar").click(function(e){
 							$( "#rutum_ruta_frecuencia" ).trigger( "focus" );
 							<% if params[:action] == "edit" then %>
@@ -96,7 +96,7 @@
 	</div>
 <% end %>
 <script>
-	$(document).on("page:update", function(){
+	document.addEventListener("turbolinks:load", function() {
    		$( "#estacion1" ).combobox();
    		$( "#estacion2" ).combobox();
    		$( "#estacion3" ).combobox();
