--- a/app/views/ruta/index.html.erb
+++ b/app/views/ruta/index.html.erb
@@ -64,7 +64,7 @@
 
 <script>
 
-	$(document).on('page:load', function() {
+	document.addEventListener("turbolinks:load", function() {
 			if ( $.fn.dataTable.isDataTable( '#indexTable' ) ) {
 			    table = $('#indexTable').DataTable();
 			}
